Improved render performance (lazy rendering). Messages will fade in as they render. Added global wrapping to messages. Added markdown support. Fixed message content overflow. Fixed reactions not wrapping. Added mention tag support. Added fallbacks to profile pics, which are now a seperate component.

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,10 @@ input::placeholder {
   color: var(--clr-text-placeholder)
 }
 
+.renderIfVisible {
+  width: 100%;
+}
+
 ::-webkit-scrollbar {
   width: .875rem;
 }
